[project]
name = "merge"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "vllm",
    "bm25s",
    "pystemmer",
    "ranx",
    "ir-datasets",
    "anthropic",
]

[tool.uv]
# Blackwell (sm_120) + CUDA 13 driver:用 PyTorch cu128 wheel(driver 580 向下相容)
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
